added some styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Timer app</h1>
         <div class ="container">
             <div class ="form">
-                <table>
+                <table class="inputFields">
                     <tr>
                         <td>Ramp up, min</td>
                         <td>Boiling, h</td>
@@ -50,4 +50,8 @@
             <div></div>
             </div>
         </div>
+        <footer>
+            <p>© Made by T.V. 2022. All rights reserved.</p>
+        </footer>
     </body>
+    
